--- a/_sass/_07_layout.scss
+++ b/_sass/_07_layout.scss
@@ -65,7 +65,7 @@ body.video cite { color: #fff; }
 ------------------------------------------------------------------- */
 
 #masthead {
-    background: #45B29D;
+    background: #60A9F1;
     border-bottom: 1px solid #334D5C
  ;
 }
@@ -83,7 +83,7 @@ body.video cite { color: #fff; }
     text-shadow: 0 2px 3px rgba(0,0,0,.4);
 }
 #masthead-no-image-header {
-    height: 175px;
+    height: 125px;
 }
 #masthead-no-image-header #logo img {
     margin-top: 60px;
