--- a/_sass/foundation-components/_top-bar.scss
+++ b/_sass/foundation-components/_top-bar.scss
@@ -13,8 +13,9 @@
 $include-html-top-bar-classes: $include-html-classes !default;
 
 // Background color for the top bar
-$topbar-bg-color: $oil !default;
+$topbar-bg-color: #9191DA !default;
 $topbar-bg: $topbar-bg-color !default;
+$topbar-background: #9191DA;
 
 // Height and margin
 $topbar-height: rem-calc(45) !default;
