--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -1,3 +1,4 @@
+<!--
 {% if page.header == NULL and page.header.image_fullwidth == NULL and page.header.pattern == NULL and page.header.background-color == NULL and page.header.title == NULL %}
 
 <div id="masthead-no-image-header">
@@ -6,9 +7,10 @@
 			<a id="logo" href="{{ site.url }}" title="{{ site.title }} – {{ site.slogan }}">
 				<img src="{{ site.url }}/assets/img/{{ site.logo }}" alt="{{ site.title }} – {{ site.slogan }}">
 			</a>
-		</div><!-- /.small-12.columns -->
-	</div><!-- /.row -->
-</div><!-- /#masthead -->
+		</div> <!-- /.small-12.columns END_COMMENT_TAG
+	</div>  <!-- /.row END_COMMENT_TAG
+</div><!-- /#masthead END_COMMENT_TAG
+
 
 {% if page.breadcrumb == true %}
 {% include breadcrumb.html %}
@@ -24,9 +26,9 @@
 	<div class="row">
 		<div class="small-12 columns">
 			<div class="masthead-title">{{ page.header.title }}</div>
-		</div><!-- /.small-12.columns -->
-	</div><!-- /.row -->
-</div><!-- /#masthead -->
+		</div><!-- /.small-12.columns END_COMMENT_TAG
+	</div><!-- /.row END_COMMENT_TAG
+</div><!-- /#masthead END_COMMENT_TAG
 
 {% if page.breadcrumb == true %}
 {% include breadcrumb.html %}
@@ -54,9 +56,9 @@
 			<a id="logo" href="{{ site.url }}" title="{{ site.title }} – {{ site.slogan }}">
 				<img src="{{ site.url }}/assets/img/{{ site.logo }}" alt="{{ site.title }} – {{ site.slogan }}">
 			</a>
-		</div><!-- /.small-12.columns -->
-	</div><!-- /.row -->
-</div><!-- /#masthead -->
+		</div><!-- /.small-12.columns END_COMMENT_TAG
+	</div><!-- /.row END_COMMENT_TAG
+</div><!-- /#masthead END_COMMENT_TAG
 
 {% if page.breadcrumb == true %}
 {% include breadcrumb.html %}
@@ -82,9 +84,9 @@
 	<div class="row">
 		<figure class="small-12 columns">
 			<img src="{{ site.url }}/images/{{ page.header.image }}" alt="{{ site.title }}">
-		</figure><!-- /.small-12.columns -->
-	</div><!-- /.row -->
-</div><!-- /#masthead -->
+		</figure><!-- /.small-12.columns END_COMMENT_TAG
+	</div><!-- /.row END_COMMENT_TAG
+</div><!-- /#masthead END_COMMENT_TAG
 
 {% if page.breadcrumb == true %}
 {% include breadcrumb.html %}
@@ -110,9 +112,9 @@
 	<div class="row">
 		<figure class="small-12 columns">
 			<img src="{{ site.url }}/images/{{ page.header.image }}" alt="{{ site.title }}">
-		</figure><!-- /.small-12.columns -->
-	</div><!-- /.row -->
-</div><!-- /#masthead -->
+		</figure><!-- /.small-12.columns END_COMMENT_TAG
+	</div><!-- /.row END_COMMENT_TAG
+</div><!-- /#masthead END_COMMENT_TAG
 
 {% if page.breadcrumb == true %}
 {% include breadcrumb.html %}
@@ -138,4 +140,4 @@
 {% include breadcrumb.html %}
 {% endif %}
 
-{% endif %}
+{% endif %} -->
