--- a/_sass/_02_settings_typography.scss
+++ b/_sass/_02_settings_typography.scss
@@ -25,7 +25,9 @@ $font-family-sans-serif: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $font-family-serif: "Volkhov", Georgia, Times, serif;
 $font-family-monospace: "Lucida Console", Monaco, monospace;
 
-$body-font-family: $font-family-sans-serif;
+$font-body-text: "Arial", "Tahoma", Helvetica, Freesans, sans-serif;
+
+$body-font-family: $font-body-text;
 $body-font-weight: normal;
 $body-font-style: normal;
 
