--- a/_sass/_07_layout.scss
+++ b/_sass/_07_layout.scss
@@ -45,8 +45,9 @@ body.video cite { color: #fff; }
 ------------------------------------------------------------------- */
 
 #navigation {
-    -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,.2);
-    box-shadow: 0 2px 3px 0 rgba(0,0,0,.2);
+    -webkit-box-shadow: 0 2px 2px 0 rgba(145,145,218,.2);
+    box-shadow: 0 2px 3px 0 rgba(145,145,218,.2);
+    background-color: $ci-5;
 }
 
 
@@ -66,11 +67,10 @@ body.video cite { color: #fff; }
 
 #masthead {
     background: #60A9F1;
-    border-bottom: 1px solid #334D5C
- ;
+    border-bottom: 1px solid #334D5C;
 }
 #masthead-no-image-header {
-     background: #45B29D;
+     background: #60A9F1;
      border-bottom: 1px solid #334D5C
  ;
 }
@@ -285,7 +285,7 @@ body.video cite { color: #fff; }
 ------------------------------------------------------------------- */
 
 #subfooter {
-    background: #45B29D;
+    background: #60A9F1;
     color: #111;
     padding-top: 30px;
     padding-bottom: 10px;
