--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,8 +12,7 @@
         <nav class="row">
           <section id="subfooter-left" class="b30 small-12 medium-6 columns">
             <ul class="inline-list">
-              <li>© 2015 Thayumanavar | Designed and developed by thayumanavar 
-                with JEKYLL using FEELING RESPONSIVE theme</li>
+              <li>© 2015 Thayumanavar | uses jekyll & feeling responsive</li> 
             </ul>
           </section>
 
