--- a/_includes/footer_scripts.html
+++ b/_includes/footer_scripts.html
@@ -2,7 +2,11 @@
 
 {% if page.header.image_fullwidth %}
 <script>
-    $("#masthead").backstretch("{{ site.url }}/images/{{ page.header.image_fullwidth }}", {fade: 700});
+  $("#masthead").backstretch([
+    "{{ site.url }}/images/{{ page.header.image_fullwidth }}",
+    "{{ site.url }}/images/kv_avk.jpg",
+  ],
+     {duration: 3000, fade: 700});
     $("#masthead-with-text").backstretch("{{ site.url }}/images/{{ page.header.image_fullwidth }}", {fade: 700});
 </script>
 {% endif %}
