--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -1,16 +1,14 @@
-<!--
 {% if page.header == NULL and page.header.image_fullwidth == NULL and page.header.pattern == NULL and page.header.background-color == NULL and page.header.title == NULL %}
 
 <div id="masthead-no-image-header">
 	<div class="row">
 		<div class="small-12 columns">
-			<a id="logo" href="{{ site.url }}" title="{{ site.title }} – {{ site.slogan }}">
-				<img src="{{ site.url }}/assets/img/{{ site.logo }}" alt="{{ site.title }} – {{ site.slogan }}">
+			<a id="logo" href="{{ site.url }}" title="{{ site.title }} – {{ site.slogan }} - {{ page.header.image_fullwidth }}">
+				 <img src="{{ site.url }}/assets/img/{{ site.logo }}" alt="{{ site.title }} – {{ site.slogan }}">
 			</a>
-		</div> <!-- /.small-12.columns END_COMMENT_TAG
-	</div>  <!-- /.row END_COMMENT_TAG
-</div><!-- /#masthead END_COMMENT_TAG
-
+		</div><!-- /.small-12.columns -->
+	</div><!-- /.row -->
+</div><!-- /#masthead -->
 
 {% if page.breadcrumb == true %}
 {% include breadcrumb.html %}
@@ -26,9 +24,9 @@
 	<div class="row">
 		<div class="small-12 columns">
 			<div class="masthead-title">{{ page.header.title }}</div>
-		</div><!-- /.small-12.columns END_COMMENT_TAG
-	</div><!-- /.row END_COMMENT_TAG
-</div><!-- /#masthead END_COMMENT_TAG
+		</div><!-- /.small-12.columns -->
+	</div><!-- /.row -->
+</div><!-- /#masthead -->
 
 {% if page.breadcrumb == true %}
 {% include breadcrumb.html %}
@@ -56,9 +54,9 @@
 			<a id="logo" href="{{ site.url }}" title="{{ site.title }} – {{ site.slogan }}">
 				<img src="{{ site.url }}/assets/img/{{ site.logo }}" alt="{{ site.title }} – {{ site.slogan }}">
 			</a>
-		</div><!-- /.small-12.columns END_COMMENT_TAG
-	</div><!-- /.row END_COMMENT_TAG
-</div><!-- /#masthead END_COMMENT_TAG
+		</div><!-- /.small-12.columns -->
+	</div><!-- /.row -->
+</div><!-- /#masthead -->
 
 {% if page.breadcrumb == true %}
 {% include breadcrumb.html %}
@@ -84,9 +82,9 @@
 	<div class="row">
 		<figure class="small-12 columns">
 			<img src="{{ site.url }}/images/{{ page.header.image }}" alt="{{ site.title }}">
-		</figure><!-- /.small-12.columns END_COMMENT_TAG
-	</div><!-- /.row END_COMMENT_TAG
-</div><!-- /#masthead END_COMMENT_TAG
+		</figure><!-- /.small-12.columns -->
+	</div><!-- /.row -->
+</div><!-- /#masthead -->
 
 {% if page.breadcrumb == true %}
 {% include breadcrumb.html %}
@@ -112,9 +110,9 @@
 	<div class="row">
 		<figure class="small-12 columns">
 			<img src="{{ site.url }}/images/{{ page.header.image }}" alt="{{ site.title }}">
-		</figure><!-- /.small-12.columns END_COMMENT_TAG
-	</div><!-- /.row END_COMMENT_TAG
-</div><!-- /#masthead END_COMMENT_TAG
+		</figure><!-- /.small-12.columns -->
+	</div><!-- /.row -->
+</div><!-- /#masthead -->
 
 {% if page.breadcrumb == true %}
 {% include breadcrumb.html %}
@@ -140,4 +138,4 @@
 {% include breadcrumb.html %}
 {% endif %}
 
-{% endif %} -->
+{% endif %}
