--- a/_sass/_04_settings_global.scss
+++ b/_sass/_04_settings_global.scss
@@ -69,7 +69,8 @@ $spacing-unit: 30px;
 // $base-font-size: 100%;
 
 $base-font-size: 16px;
-$rem-base: $base-font-size;
+/* $rem-base: $base-font-size; */
+$rem-base: 17px;
 
 
 // The $base-font-size is 100% while $base-line-height is 150%
@@ -1372,7 +1373,8 @@ $table-head-bg: $grey-2;
 // $include-html-top-bar-classes: $include-html-classes;
 
 // Background color for the top bar
-$topbar-bg-color: #9191DA;
+
+$topbar-bg-color: #ffffff;
 $topbar-bg: $topbar-bg-color;
 
 // Height and margin
