--- a/_sass/foundation-components/_top-bar.scss
+++ b/_sass/foundation-components/_top-bar.scss
@@ -13,17 +13,19 @@
 $include-html-top-bar-classes: $include-html-classes !default;
 
 // Background color for the top bar
-$topbar-bg-color: #9191DA !default;
+$topbar-bg-color: navy !default;
 $topbar-bg: $topbar-bg-color !default;
-$topbar-background: #9191DA;
+$topbar-background: navy;
 
 // Height and margin
 $topbar-height: rem-calc(45) !default;
 $topbar-margin-bottom: 0 !default;
 
 // Controlling the styles for the title in the top bar
-$topbar-title-weight: $font-weight-normal !default;
-$topbar-title-font-size: rem-calc(17) !default;
+$topbar-title-weight: 600;
+/* $topbar-title-weight: $font-weight-normal !default; */
+$topbar-title-font-size: 27px;
+/* $topbar-title-font-size: rem-calc(17) !default; */
 
 // Set the link colors and styles for top-level nav
 $topbar-link-color: $white !default;
@@ -35,7 +37,7 @@ $topbar-link-font-size: rem-calc(13) !default;
 $topbar-link-hover-lightness: -10% !default; // Darken by 10%
 $topbar-link-bg: $topbar-bg !default;
 $topbar-link-bg-hover: $oil !default;
-$topbar-link-bg-color-hover: $charcoal !default;
+$topbar-link-bg-color-hover: #ffffff !default;
 $topbar-link-bg-active: $primary-color !default;
 $topbar-link-bg-active-hover: scale-color($primary-color, $lightness: -14%) !default;
 $topbar-link-font-family: $body-font-family !default;
@@ -155,7 +157,7 @@ $topbar-dropdown-arrows: true !default; //Set false to remove the \00bb >> text 
       height: $topbar-height;
       line-height: $topbar-height;
       position: relative;
-      background: $topbar-bg;
+      background: #ffffff; //$topbar-bg;
       margin-bottom: $topbar-margin-bottom;
 
       // Topbar Global list Styles
@@ -200,14 +202,15 @@ $topbar-dropdown-arrows: true !default; //Set false to remove the \00bb >> text 
       .name {
         height: $topbar-height;
         margin: 0;
-        font-size: $rem-base;
+        font-size: 27px;
 
         h1, h2, h3, h4, p, span {
           line-height: $topbar-height;
-          font-size: $topbar-title-font-size;
+          font-size: 27px; /* $topbar-title-font-size; */
           margin: 0;
           a {
             font-weight: $topbar-title-weight;
+            font-variant: bold;
             color: $topbar-link-color;
             width: 75%;
             display: block;
@@ -293,6 +296,7 @@ $topbar-dropdown-arrows: true !default; //Set false to remove the \00bb >> text 
       #{$default-float}: 0;
       position: relative;
       width: auto;
+      color: #fff;
       @include single-transition($default-float, $topbar-transition-speed);
 
       ul {
@@ -300,7 +304,8 @@ $topbar-dropdown-arrows: true !default; //Set false to remove the \00bb >> text 
         width: 100%;
         height: auto;
         display: block;
-        font-size: $rem-base;
+        color: #fff;
+        font-size: 25px; /* $rem-base; */
         margin: 0;
       }
 
@@ -321,9 +326,10 @@ $topbar-dropdown-arrows: true !default; //Set false to remove the \00bb >> text 
           padding: 12px 0 12px 0;
           padding-#{$default-float}: $topbar-link-padding;
           font-family: $topbar-link-font-family;
-          font-size: $topbar-link-font-size;
-          font-weight: $topbar-link-weight;
-          text-transform: $topbar-link-text-transform;
+          font-size:  21px; /*$topbar-link-font-size;*/
+          font-weight: normal; /* $topbar-link-weight; */
+          letter-spacing: -1px;
+          /* text-transform: $topbar-link-text-transform; */
 
           &.button {
             font-size: $topbar-link-font-size;
