More layout changes.

--- a/_includes/footer_scripts.html
+++ b/_includes/footer_scripts.html
@@ -5,6 +5,7 @@
   $("#masthead").backstretch([
     "{{ site.url }}/images/{{ page.header.image_fullwidth }}",
     "{{ site.url }}/images/kv_avk.jpg",
+    "{{ site.url }}/images/train_37.jpg"
   ],
      {duration: 3000, fade: 700});
     $("#masthead-with-text").backstretch("{{ site.url }}/images/{{ page.header.image_fullwidth }}", {fade: 700});
