--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -3,7 +3,8 @@
 <div id="masthead-no-image-header">
 	<div class="row">
 		<div class="small-12 columns">
-			<a id="logo" href="{{ site.url }}" title="{{ site.title }} – {{ site.slogan }} - {{ page.header.image_fullwidth }}">
+<!--			<a id="logo" href="{{ site.url }}" title="{{ site.title }} – {{ site.slogan }} - {{ page.header.image_fullwidth }}"> -->
+			<a id="logo" href="{{ site.url }}">
 				 <img src="{{ site.url }}/assets/img/{{ site.logo }}" alt="{{ site.title }} – {{ site.slogan }}">
 			</a>
 		</div><!-- /.small-12.columns -->
@@ -51,9 +52,11 @@
 <div id="masthead">
 	<div class="row">
 		<div class="small-12 columns">
-			<a id="logo" href="{{ site.url }}" title="{{ site.title }} – {{ site.slogan }}">
-				<img src="{{ site.url }}/assets/img/{{ site.logo }}" alt="{{ site.title }} – {{ site.slogan }}">
-			</a>
+<!--			<a id="logo" href="{{ site.url }}" title="{{ site.title }} – {{ site.slogan }} - {{ page.header.image_fullwidth }}">
+					<a id="logo" href="{{ site.url }}"> -->
+<br><br><br>
+				<img src="{{ site.url }}/assets/img/{{ site.logo }}">
+<!--			</a> -->
 		</div><!-- /.small-12.columns -->
 	</div><!-- /.row -->
 </div><!-- /#masthead -->
