--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -1,16 +1,16 @@
 {% if page.header == NULL and page.header.image_fullwidth == NULL and page.header.pattern == NULL and page.header.background-color == NULL and page.header.title == NULL %}
-
+<!--
 <div id="masthead-no-image-header">
 	<div class="row">
 		<div class="small-12 columns">
-<!--			<a id="logo" href="{{ site.url }}" title="{{ site.title }} – {{ site.slogan }} - {{ page.header.image_fullwidth }}"> -->
+<!--			<a id="logo" href="{{ site.url }}" title="{{ site.title }} – {{ site.slogan }} - {{ page.header.image_fullwidth }}"> 
 			<a id="logo" href="{{ site.url }}">
 				 <img src="{{ site.url }}/assets/img/{{ site.logo }}" alt="{{ site.title }} – {{ site.slogan }}">
 			</a>
-		</div><!-- /.small-12.columns -->
-	</div><!-- /.row -->
-</div><!-- /#masthead -->
-
+		</div><!-- /.small-12.columns
+	</div><!-- /.row
+</div><!-- /#masthead 
+-->
 {% if page.breadcrumb == true %}
 {% include breadcrumb.html %}
 {% endif %}
