Add map api key.

--- a/_layouts/trace.html
+++ b/_layouts/trace.html
@@ -133,5 +133,7 @@ format: blog-index
 -->
     <div id="map">JavaScript needs to be enabled on the browser</div>
     <script src="/js/gpx-trace.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDOoa8VpaUKZgfxm44HSo8JMOebYcsACtg&callback=initMap"
+   async defer></script>
   </body>
 </html>
