--- a/_layouts/trace.html
+++ b/_layouts/trace.html
@@ -130,10 +130,10 @@ format: blog-index
       </div>
     </div>
 -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDOoa8VpaUKZgfxm44HSo8JMOebYcsACtg"></script>
     <div id="map">JavaScript needs to be enabled on the browser</div>
     <script src="/js/gpx-trace.js"></script>
 
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDOoa8VpaUKZgfxm44HSo8JMOebYcsACtg&callback=initMap"
    async defer></script>
   </body>
 </html>
